ATLAS-1115: atlas-text-field validation fixed

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -168,7 +168,8 @@
   },
   "VALIDATION_ATLAS_FORM_COMPONENT": {
     "REQUIRED": "Dies ist ein Pflichtfeld.",
-    "MAXLENGTH": "Es sind maximal {{maxlength.requiredLength}} Zeichen erlaubt."
+    "MAXLENGTH": "Es sind maximal {{maxlength.requiredLength}} Zeichen erlaubt.",
+    "PATTERN": "Ungültiges Format. Erlaubte Zeichen sind: {{pattern.allowedCharacters}}"
   },
   "VALIDATION": {
     "REQUIRED": "Dies ist ein Pflichtfeld.",
