--- a/line-directory/src/docs/release-notes.adoc
+++ b/line-directory/src/docs/release-notes.adoc
@@ -11,3 +11,11 @@
 **Versioning**
 
 Business objects marked with a * may be created and updated using the Atlas Versioning Engine. The rules and supported cases may be found in the user handbook.
+
+==== Timetable Hearings
+
+Timetable Hearings are held each year.
+
+Every year citizens may provide statements on the next iteration of the public transport timetable.
+
+This is the initial API for year and statement handling.
