ATLAS-1115: wip: integrate atlas-search-select, todo: a part of functionality, validation errors on atlas-search-select, sboidRestrictions

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -63,7 +63,8 @@
     "SEARCH": {
       "VALIDITY": "Gültig am",
       "SEARCH_CRITERIA": "Suche",
-      "SEARCH_FOR": "Suche nach"
+      "SEARCH_FOR": "Suche nach",
+      "NO_RESULTS_FOUND": "Es wurden keine Resultate gefunden"
     },
     "NOTIFICATION": {
       "OPTIMISTIC_LOCK_ERROR": "Das Objekt wurde entweder bereits gelöscht oder in der Zwischenzeit bearbeitet. Bitte laden Sie die Seite neu, indem Sie die Taste F5 drücken."
