--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -63,7 +63,8 @@
     "SEARCH": {
       "VALIDITY": "Valable le",
       "SEARCH_CRITERIA": "Recherche",
-      "SEARCH_FOR": "Recherche de"
+      "SEARCH_FOR": "Recherche de",
+      "NO_RESULTS_FOUND": "Aucun résultat trouvé"
     },
     "NOTIFICATION": {
       "OPTIMISTIC_LOCK_ERROR": "Soit l’objet a déjà été supprimé, soit il a été traité entre-temps. Veuillez recharger la page en appuyant sur la touche F5."
