Revert "ATLAS-1115: wip: integrate atlas-search-select, todo: a part of functionality, validation errors on atlas-search-select, sboidRestrictions"
This reverts commit 552184c2591264fb3c1546cc91defb6072e319b4.

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -63,8 +63,7 @@
     "SEARCH": {
       "VALIDITY": "Valable le",
       "SEARCH_CRITERIA": "Recherche",
-      "SEARCH_FOR": "Recherche de",
-      "NO_RESULTS_FOUND": "Aucun résultat trouvé"
+      "SEARCH_FOR": "Recherche de"
     },
     "NOTIFICATION": {
       "OPTIMISTIC_LOCK_ERROR": "Soit l’objet a déjà été supprimé, soit il a été traité entre-temps. Veuillez recharger la page en appuyant sur la touche F5."
