--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -55,6 +55,7 @@
     "CREATE_VERSION": "Ajouter la version",
     "ROLES": {
       "READER": "Reader",
+      "EXPLICIT_READER": "Explicit Reader",
       "SUPERVISOR": "Supervisor",
       "SUPER_USER": "Super User",
       "WRITER": "Writer",
