ATLAS-1095: tests with postman completed

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -205,7 +205,8 @@
     "APPLICATION": {
       "LIDI": "Linien- und Teillinien",
       "TTFN": "Fahrplanfeldnummern",
-      "BODI": "Geschäftsorganisationen"
+      "BODI": "Geschäftsorganisationen",
+      "TIMETABLE_HEARING": "Fahrplananhörungen"
     },
     "ACCOUNT_STATUS_TYPE": {
       "ACTIVE": "Aktiv",
