ATLAS-1006: map display table, impl sub heading

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -537,6 +537,10 @@
     "TRANSPORT_COMPANY": "Transportunternehmen",
     "TTFNID": "Feld-Nr.",
     "TIMETABLE_FIELD_NUMBER": "Fahrplanfeld",
+    "OVERVIEW_TAB": {
+      "OVERVIEW_ACTUAL_SUBHEADING_PREFIX": "Das Fahrplanverfahren Schweiz des BAV für den Fahrplan {{timeTableYear}} dauert von",
+      "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} bis zum {{hearingTo}}."
+    },
     "CANTON": {
       "CH": "Gesamtschweiz",
       "AG": "Aargau",
