--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -42,6 +42,8 @@
     "FILLED_AUTOMATICALLY": "Remplissage automatique",
     "VALID_FROM": "Valable du",
     "VALID_TO": "Valable au",
+    "EDIT_ON": "Modifiée",
+    "EDIT_BY": "à travers",
     "STATUS": "Statut",
     "CANTONS": "Cantons",
     "STATUS_TYPES": {
@@ -530,6 +532,15 @@
   },
   "TTH": {
     "OPEN": "{{canton}} ouvrir",
+    "STATEMENT_STATUS": "Statut",
+    "SWISS_CANTON": "Canton",
+    "TRANSPORT_COMPANY": "Entreprise de transport",
+    "TTFNID": "Cadre-nº.",
+    "TIMETABLE_FIELD_NUMBER": "Cadre horaire",
+    "OVERVIEW_TAB": {
+      "OVERVIEW_ACTUAL_SUBHEADING_PREFIX": "La procédure d'établissement de l'horaire suisse de l'OFT pour l'horaire {{timeTableYear}} dure de",
+      "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} jusqu'au {{hearingTo}}."
+    },
     "CANTON": {
       "CH": "Suisse entière",
       "AG": "Argovie",
