ATLAS-1006: add overiview with tabs

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -531,6 +531,11 @@
     }
   },
   "TTH": {
+    "TAB": {
+      "ACTUAL": "Aktuelle Anhörung",
+      "PLANNED": "Geplante Anhörungen",
+      "ARCHIVED": "Archivierte Anhörungen"
+    },
     "OPEN": "{{canton}} öffnen",
     "STATEMENT_STATUS": "Status",
     "SWISS_CANTON": "Kanton",
