--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -531,6 +531,11 @@
     }
   },
   "TTH": {
+    "TAB": {
+      "ACTUAL": "Audition actuelle",
+      "PLANNED": "Audition prévue",
+      "ARCHIVED": "Audition archivée"
+    },
     "OPEN": "{{canton}} ouvrir",
     "STATEMENT_STATUS": "Statut",
     "SWISS_CANTON": "Canton",
@@ -539,7 +544,9 @@
     "TIMETABLE_FIELD_NUMBER": "Cadre horaire",
     "OVERVIEW_TAB": {
       "OVERVIEW_ACTUAL_SUBHEADING_PREFIX": "La procédure d'établissement de l'horaire suisse de l'OFT pour l'horaire {{timeTableYear}} dure de",
-      "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} jusqu'au {{hearingTo}}."
+      "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} jusqu'au {{hearingTo}}.",
+      "OVERVIEW_PLANNED_SUBHEADING": "Vous trouverez ici toutes les consultations d'horaires prévues. Vous ne pouvez pas saisir d'avis avant le début d'une année d'horaire.",
+      "OVERVIEW_ARCHIVED_SUBHEADING": "Vous trouverez ici toutes les consultations d'horaires archivées, classées par année d'horaire."
     },
     "CANTON": {
       "CH": "Suisse entière",
