ATLAS-1006: add download csv button

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -536,6 +536,9 @@
       "PLANNED": "Geplante Anhörungen",
       "ARCHIVED": "Archivierte Anhörungen"
     },
+    "BUTTON": {
+      "DOWNLOAD_CSV": "Download [CSV]"
+    },
     "SELECT_CANTON": "Kanton auswählen",
     "OPEN": "{{canton}} öffnen",
     "STATEMENT_STATUS": "Status",
