--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -536,6 +536,9 @@
       "PLANNED": "Audition prévue",
       "ARCHIVED": "Audition archivée"
     },
+    "BUTTON": {
+      "DOWNLOAD_CSV": "Download [CSV]"
+    },
     "SELECT_CANTON": "Sélectionner le canton",
     "OPEN": "{{canton}} ouvrir",
     "STATEMENT_STATUS": "Statut",
