ATLAS-1005: fix cantons translations

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -562,17 +562,17 @@
       "BS": "Bâle-Ville",
       "FR": "Fribourg",
       "GE": "Genève",
-      "GL": "Glarus",
-      "GR": "Glaris",
+      "GL": "Glaris",
+      "GR": "Grisons",
       "JU": "Jura",
       "LU": "Lucerne",
       "NE": "Neuchâtel",
-      "NW": "Nidwalden",
-      "OW": "Nidwald",
+      "NW": "Nidwald",
+      "OW": "Obwald",
       "SG": "Saint-Gall",
       "SH": "Schaffhouse",
       "SO": "Soleure",
-      "SZ": "Schwyz",
+      "SZ": "Schwytz",
       "TG": "Thurgovie",
       "TI": "Tessin",
       "UR": "Uri",
