--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -571,7 +571,7 @@
       "OW": "Obvaldo",
       "SG": "San Gallo",
       "SH": "Sciaffusa",
-      "SO": "Soloturno",
+      "SO": "Soletta",
       "SZ": "Svitto",
       "TG": "Turgovia",
       "TI": "Ticino",
