--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -543,7 +543,7 @@
     "SELECT_YEAR": "Selezionare l'anno",
     "TABLE_RESULT_HEADING": "{{totalCount}} dichiarazioni per l'orario {{year}}",
     "OPEN": "{{canton}} aprire",
-    "STATEMENT_STATUS": "Stato",
+    "STATEMENT_STATUS_HEADER": "Stato",
     "SWISS_CANTON": "Cantone",
     "TRANSPORT_COMPANY": "Azienda di trasporto",
     "TTFNID": "Campo-n.",
@@ -553,6 +553,15 @@
       "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} fino a {{hearingTo}}.",
       "OVERVIEW_PLANNED_SUBHEADING": "Qui troverete tutte le udienze programmate. Non è possibile inserire commenti prima dell'inizio di un anno di calendario.",
       "OVERVIEW_ARCHIVED_SUBHEADING": "Qui troverete tutte le audizioni archiviate per l'anno d'orario."
+    },
+    "STATEMENT_STATUS": {
+      "RECEIVED": "arrivato",
+      "IN_REVIEW": "in esame",
+      "ACCEPTED": "accetato",
+      "REJECTED": "rifiutato",
+      "MOVED": "spostato",
+      "JUNK": "*Spam-Mail*",
+      "REVOKED": "Revocato"
     },
     "CANTON": {
       "CH": "Tutta la Svizzera",
