--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -194,6 +194,7 @@
     "SEARCH_FOR_FILTER_CANTON": "Cantoni e applicazioni",
     "NEW": "Inserire nuovo utente",
     "NEW_INFORMATION": "Dettagli del nuovo utente",
+    "NEW_CLIENT_CREDENTIAL": "Neue Client Credentials berechtigen",
     "INFORMATION": "Dettagli utente",
     "NOT_FOUND": "L'utente non è stato trovato",
     "TABLE_HEADER": "Utente",
