ATLAS-963: make it compile

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -235,6 +235,7 @@
     "CLIENT_CREDENTIAL": {
       "NEW": "Neuen Client berechtigen",
       "NEW_INFORMATION": "Angaben zum Client",
+      "INFORMATION": "Angaben zum Client",
       "CLIENT_ID": "Client ID",
       "ALIAS": "Alias",
       "ALIAS_INFO": "Wird als Anzeigename im Frontend für z.B. \"geändert durch\" ersichtlich sein",
