--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -194,7 +194,7 @@
     "SEARCH_FOR_FILTER_CANTON": "Cantoni e applicazioni",
     "NEW": "Inserire nuovo utente",
     "NEW_INFORMATION": "Dettagli del nuovo utente",
-    "NEW_CLIENT_CREDENTIAL": "Neue Client Credentials berechtigen",
+    "NEW_CLIENT_CREDENTIAL": "Autorizzare le credenziali dei nuovi clienti",
     "INFORMATION": "Dettagli utente",
     "NOT_FOUND": "L'utente non è stato trovato",
     "TABLE_HEADER": "Utente",
@@ -229,17 +229,17 @@
       "SBBUSERID": "L'utente {{sbbUserId}} è già memorizzato."
     },
     "TABS": {
-      "USER": "Benutzer",
+      "USER": "Utenti",
       "CLIENTS": "Clients"
     },
     "CLIENT_CREDENTIAL": {
-      "NEW": "Neuen Client berechtigen",
-      "NEW_INFORMATION": "Angaben zum Client",
-      "INFORMATION": "Angaben zum Client",
+      "NEW": "Autorizzare un nuovo cliente",
+      "NEW_INFORMATION": "Dettagli del cliente",
+      "INFORMATION": "Dettagli del cliente",
       "CLIENT_ID": "Client ID",
       "ALIAS": "Alias",
-      "ALIAS_INFO": "Wird als Anzeigename im Frontend für z.B. \"geändert durch\" ersichtlich sein",
-      "COMMENT": "Zusätzlicher Kommentar zum Client"
+      "ALIAS_INFO": "Sarà visibile come nome di visualizzazione nel frontend, ad esempio \"modificato da\".",
+      "COMMENT": "Ulteriori commenti sul cliente"
     }
   },
   "TTFN": {
